<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/images"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_marginStart="67dp"
        android:id="@+id/kelly"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        app:layout_goneMarginStart="67dp"
        android:layout_height="wrap_content"
        android:text="@string/kelly_gomez"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image"
        android:layout_marginLeft="67dp" />

    <TextView
        android:layout_marginStart="67dp"
        android:id="@+id/age"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:text="@string/_23"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kelly"
        android:layout_marginLeft="67dp" />

    <TextView
        android:layout_marginStart="67dp"
        android:id="@+id/work"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:text="@string/profession_programmer"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/age"
        android:layout_marginLeft="67dp" />

    <TextView
        android:layout_marginStart="67dp"
        android:id="@+id/biography"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:text="@string/biography"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/work"
        android:layout_marginLeft="67dp" />

    <TextView
        android:id="@+id/opisan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/kelly_is_a"
        android:textSize="20sp"
        android:layout_marginStart="67dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/biography"
        android:layout_marginLeft="67dp" />


</androidx.constraintlayout.widget.ConstraintLayout>